swagger-and-new-weight-update-function
